<resources>
    <string name="app_name">RNG ParT</string>
    <string name="menu_cmd">Choose a random generator \n for your game</string>
    <string name="draw_name">Drawing names</string>
    <string name="make_groups">Create groups</string>
    <string name="basic">Basic Dice</string>
    <string name="basic_dice_title">Welcome to Basic Dice</string>
    <string name="draw_names_title">Welcome to Drawing Names</string>
    <string name="create_group_title">Welcome to Creating Groups</string>
    <string name="go_back">Back</string>
    <string name="button">Button</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="interval">Interval</string>
    <string name="roll">Roll</string>
    <string name="integer">Integer</string>
    <string name="other_num">Any number</string>
    <string name="random_color">Roll a random color</string>
    <string name="coin_flip">Flip a coin</string>
    <string name="draw_name_btn">Shuffle &amp; Draw Names</string>
    <string name="draw_num_name">Draw how many names?</string>
    <string name="num_names">How many names total?</string>
    <string name="replacement">With Replacement?</string>
    <string name="email">Send Message?</string>
    <string name="reshuffle">Redraw</string>
    <string name="draw_results">Names Drawn</string>
</resources>
