<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color"
    tools:context=".MainMenu">

    <Button
        android:id="@+id/rng0"
        android:layout_width="177dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="33dp"
        android:onClick="enter"
        android:text="@string/basic"
        app:layout_constraintBottom_toTopOf="@+id/rng1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textCommand" />

    <Button
        android:id="@+id/rng1"
        android:layout_width="177dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="38dp"
        android:onClick="enter"
        android:text="@string/draw_name"
        app:layout_constraintBottom_toTopOf="@+id/rng2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rng0" />

    <TextView
        android:id="@+id/textCommand"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="39dp"
        android:layout_marginTop="68dp"
        android:gravity="center"
        android:lines="2"
        android:text="@string/menu_cmd"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/rng0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/rng2"
        android:layout_width="177dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="152dp"
        android:onClick="enter"
        android:text="@string/make_groups"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rng1" />
</android.support.constraint.ConstraintLayout>