<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_back" />

        <Button
            android:id="@+id/shuffle_draw_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reshuffle" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scroll_names"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/buttons"
        android:layout_alignParentTop="true">
        <!--Scrollable content here-->
        <LinearLayout
            android:id="@+id/ll_drawn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/activity_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/draw_results"
                android:textSize="25sp" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>